<resources>
    <string name="app_name">Praca Dyplomowa</string>
    <string name="title_activity_creditors">Klienci</string>
    <string name="title_activity_add_creditors">Dodaj klienta</string>
    <string name="title_activity_edit_creditors">Edytuj klienta</string>
    <string name="title_activity_calendar">Kalendarz</string>
    <string name="title_activity_notification">Powiadomienia</string>
    <string name="title_activity_plot">Wykresy</string>
    <string name="button_activity_add_creditor">Dodaj</string>
    <string name="button_activity_delete_creditor">Usuń</string>
    <string name="button_activity_edit_creditor">Edytuj</string>
    //Main Activity
    <string name="button_creditor">Klienci</string>
    <string name="button_calendar">Kalendarz</string>
    <string name="button_notify">Powiadomienia</string>
    <string name="button_plot">Wykresy</string>
    <string name="info">"Aplikacja służy jako pomoc w zarządzaniu długami. Dzięki niej możesz zapisywać dane klientów oraz lepiej zarządzać swoimi finansami. Aplikacja składa się z czterech elementów które pomogą ci w organizacji: \n \n 1. Klienci - Zapis i edycja danych. Aplikacja na bazie wprowadzonych danych będzie powiadamiała ciebie oraz klientów o najbliższych rozliczeniach finansowych, oraz usuwała przestarzałe tranzakcje. \n \n 2. Kalendzar - Pokazuje przyszłe przychody oraz wydatki na bazie wprowadzonych danych. \n \n 3. Powiadomiania - Służy do ustawienie preferencji odnośnie powiadomień. \n \n 4. Wykresy - Obrazuje stan salda na każdy miesiąc z osobna."</string>
    <string name="permission_info">"Aplikacja do poprawnego działania wymaga pozwolenia na dostęp do wiadomości SMS. Program wykorzystuje pozwolenie tylko i wyłącznie w celu wysyłania wiadomości. W każdej chwili możesz wyłączyć wysyłanie wiadomości w sekcji Powiadomienia"</string>
    //Creditor Activity
    <string name="tex_input_name">Imię</string>
    <string name="text_input_surname">Nazwisko</string>
    <string name="text_input_amount">Kwota</string>
    <string name="text_input_phone_number">Numer telefonu</string>
    <string name="text_input_date">Data</string>
    <string name="radio_button_debtor">Dłużnik</string>
    <string name="radio_button_creditor">Wierzyciel</string>
    <string name="text_input_number_of_payment">Ilość płatności</string>
    <string name="button_save">Zapisz</string>
    //Calendar Activity

    //Notify Activity
    <string name="text_input_SMS_string">Treść wiadomości SMS</string>
    <string name="text_input_number_of_days_before_payment_to_notify">Liczba dni przed spłatą</string>
    <string name="radio_button_if_send_sms">Czy wysyłać wiadomości SMS</string>
    <string name="radio_button_if_notify">Czy wyświetlać powiadomienia</string>
    <string name="text_label_instruction">Słowa kluczowe {kwota} {data}. Jeśli te słowa zostaną wpisane w wiadomości sms w klamrach jak powyżej aplikacja zamieni te pola na zgadzające się z danym użytkownikiem.</string>

    <string-array name="planets_array">
        <item>Jednorazowo</item>
        <item>Tygodniowo</item>
        <item>Dwutygodniowo</item>
        <item>Miesięcznie</item>
        <item>Kwartalnie</item>
        <item>Półrocznie</item>
        <item>Rocznie</item>
    </string-array>



</resources>
