<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline"
        app:layout_constraintGuide_percent=".15"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_guideline"
        app:layout_constraintGuide_percent=".85"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first_guideline"
        app:layout_constraintGuide_percent=".15"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/button_creditors"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/button_selector"
        android:onClick="startCreditorsActivity"
        android:text="@string/button_creditor"
        app:layout_constraintBottom_toBottomOf="@+id/second_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/first_guideline"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/second_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"/>

    <android.support.constraint.Guideline
        android:id="@+id/third_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <Button
        android:id="@+id/button_callendar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="startCalendarActivity"
        android:text="@string/button_calendar"
        app:layout_constraintBottom_toBottomOf="@+id/fourth_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/third_guideline" />


    <android.support.constraint.Guideline
        android:id="@+id/fourth_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <android.support.constraint.Guideline
        android:id="@+id/fifth_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <Button
        android:id="@+id/button_notify"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="startNotifyActivity"
        android:text="@string/button_notify"
        app:layout_constraintBottom_toBottomOf="@+id/sixth_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/fifth_guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/sixth_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />


    <android.support.constraint.Guideline
        android:id="@+id/seventh_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/button_plot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="startPlotActivity"
        android:text="@string/button_plot"
        app:layout_constraintBottom_toBottomOf="@+id/eighth_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/seventh_guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/eighth_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

</android.support.constraint.ConstraintLayout>

